--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
       <br>
 
       <form method="get" action="/register">
-        <button type="register">Continue</button>
+        <button type="register">Register</button>
       </form>
 
 
